2008-04-06  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/l4/hurd/pt-kill.c: Just include "../generic/pt-kill.c".

2008-03-01  Neal H. Walfield  <neal@gnu.org>

	Add signal implementation.
	* Makefile.am (SYSDEP_PATH): Add $(srcdir)/signal.
	(libpthread_a_SOURCES): Add pt-mutex-transfer-np.c, kill.c,
	killpg.c, pt-kill-siginfo-np.c, raise.c, sigaction.c, sigaddset.c,
	sigaltstack.c, sigdelset.c, sigemptyset.c, sigfillset.c,
	sig-internal.c, sig-internal.h, siginterrupt.c, sigismember.c,
	signal.c, signal-dispatch.c, signal.h, sigpending.c,
	sigprocmask.c, sigsuspend.c, sigtimedwait.c, sigwait.c,
	sigwaiter.c, sigwaitinfo.c, signal-dispatch-lowlevel.c, and
	sigprocmask.c.
	* headers.m4: Link libpthread/signal/signal.h into ../include.
	* sysdeps/generic/pt-mutex-transfer-np.c: New file.
        * signal/README: New file.
        * signal/TODO: Likewise.
        * signal/kill.c: Likewise.
        * signal/pt-kill-siginfo-np.c: Likewise.
        * signal/sig-internal.c: Likewise.
        * signal/sig-internal.h: Likewise.
        * signal/sigaction.c: Likewise.
        * signal/sigaltstack.c: Likewise.
        * signal/signal-dispatch.c: Likewise.
        * signal/signal.h: Likewise.
        * signal/sigpending.c: Likewise.
        * signal/sigsuspend.c: Likewise.
        * signal/sigtimedwait.c: Likewise.
        * signal/sigwaiter.c: Likewise.
        * signal/sigwaitinfo.c: Likewise.
	* sysdeps/l4/hurd/sig-sysdep.h: Likewise.
	* sysdeps/l4/hurd/sigprocmask.c: Likewise.
	* sysdeps/generic/killpg.c: Likewise.
	* sysdeps/generic/pt-kill.c: Likewise.
	* sysdeps/generic/raise.c: Likewise.
	* sysdeps/generic/sigaddset.c: Likewise.
	* sysdeps/generic/sigdelset.c: Likewise.
	* sysdeps/generic/sigemptyset.c: Likewise.
	* sysdeps/generic/sigfillset.c: Likewise.
	* sysdeps/generic/siginterrupt.c: Likewise.
	* sysdeps/generic/sigismember.c: Likewise.
	* sysdeps/generic/signal.c: Likewise.
	* sysdeps/generic/sigwait.c: Likewise.