@@ -742,6 +742,11 @@ extern int pthread_setschedparam (pthread_t thread, int policy,
 
 /* Set thread THREAD's scheduling priority.  */
 extern int pthread_setschedprio (pthread_t thread, int prio);
+
+
+/* Kernel-specific interfaces.  */
+
+#include <bits/pthread-np.h>
 
 
 __END_DECLS
